Fix FAQ entry wrap on mobile

--- a/components/front/faq/entry.module.css
+++ b/components/front/faq/entry.module.css
@@ -78,3 +78,9 @@
 	margin: auto 2px;
 	height: 2px;
 }
+
+@media only screen and (max-width: 960px) {
+	.entry {
+		width: 100%;
+	}
+}
